# boot/src/main/java/ro/agilehub/javacourse/car/hire/boot/advice/GlobalExceptionHandler.java
@@ -1,0 +1,18 @@
+package ro.agilehub.javacourse.car.hire.boot.advice;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseStatus;
+
+import java.util.NoSuchElementException;
+
+@ControllerAdvice
+public class GlobalExceptionHandler {
+
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    @ExceptionHandler(NoSuchElementException.class)
+    public void handleNotFound() {
+        // Nothing to do
+    }
+}
