# user.management/src/main/java/ro/agilehub/javacourse/car/hire/user/controller/mapper/CountryDTOMapper.java
@@ -1,0 +1,13 @@
+package ro.agilehub.javacourse.car.hire.user.controller.mapper;
+
+import org.mapstruct.Mapper;
+import ro.agilehub.javacourse.car.hire.api.model.CountryDTO;
+import ro.agilehub.javacourse.car.hire.user.service.domain.CountryDO;
+
+@Mapper(componentModel = "spring")
+public interface CountryDTOMapper {
+
+    CountryDTO toCountryDTO(CountryDO countryDO);
+
+    CountryDO toCountryDO(CountryDTO countryDTO);
+}
