# user.management/src/main/java/ro/agilehub/javacourse/car/hire/user/repository/entity/User.java
@@ -1,0 +1,29 @@
+package ro.agilehub.javacourse.car.hire.user.repository.entity;
+
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+
+import javax.persistence.*;
+
+@Entity
+@Table(name = "carhire_user")
+@Data
+@EqualsAndHashCode(of = "id")
+public class User {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Integer id;
+    private String email;
+    private String username;
+    private String password;
+    private String firstName;
+    private String lastName;
+
+    @ManyToOne
+    @JoinColumn(name = "country_of_residence_id")
+    private Country countryOfResidence;
+
+    private String driverLicense;
+    private String status;
+}
